--- a/app/templates/integrations/ai-support.html
+++ b/app/templates/integrations/ai-support.html
@@ -50,7 +50,7 @@
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
-                                        Please note that for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' and for Gemini, the 'gemini-1.5-flash' models have been tested.
+                                        Please note that for ChatGPT, the 'gpt-4o' or higher and for Gemini, the 'gemini-2.5-flash' or higher models have been tested.
                                       </div>
                                     </div>
                                     <label for="ai_text_model" class="input-label mt-2">AI Text model:</label>
@@ -58,7 +58,7 @@
                                     <div class="tooltip-container">
                                       <span class="fa-regular fa-circle-question me-2 mt-2"></span>
                                       <div class="tooltip-content">
-                                        Please note that for ChatGPT, the 'gpt-4-turbo' & 'gpt-4o' and for Gemini, the 'gemini-1.5-flash' models have been tested.
+                                        Please note that for ChatGPT, the 'gpt-4o' or higher and for Gemini, the 'gemini-2.5-flash' or higher models have been tested.
                                       </div>
                                     </div>
                                     <label for="ai_image_model" class="input-label mt-2">AI Image model:</label>
